# api-olx-imoveis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_exe.bat  pyproject.toml  requirements.txt  run_app.bat
.github/workflows/: ci.yml
data/: regions_ba.json  regions_sp.json
docs/: GITHUB_PUBLISH.md  olx_reverse_engineering.md
scripts/: _probe_bairros.py  _probe_detail.py  _probe_detail2.py  _probe_detail3.py  _probe_detail4.py  _probe_seller.py  _probe_seller2.py  _probe_todos.py  publish-github.ps1
src/gui/: __init__.py  app.py  disclaimer.py
src/olx_imoveis/: __init__.py  auth.py  cache.py  client.py  config.py  errors.py  export.py  export_format.py  listing_display.py  locations.py  models.py  phone.py  service.py  token_store.py  url_builder.py
src/olx_imoveis/parsers/: __init__.py  common.py  detail.py  listing.py
tests/: test_auth.py  test_cache.py  test_config.py  test_export.py  test_filters.py  test_locations.py  test_parsers.py  test_sort.py  test_url_builder.py
tests/fixtures/: detail_ad_detail_sample.html  detail_sample.html  listing_sample.html
